--- a/home/index.html
+++ b/home/index.html
@@ -163,7 +163,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Luminescent Network &copy; 2025</p>
+        <p>Luminescent Network 2025</p>
     </footer>
 
     <!-- Background Music -->
