Update staff section with new member
Added a new staff member and updated the staff section.

--- a/home/index.html
+++ b/home/index.html
@@ -155,7 +155,11 @@
                 <img src="11.png" alt="retro">
                 <p style="color: rgb(108, 108, 108);">@Retroverse <span>(Former CEO)</span></p>
             </div>
+             <div class="staff-member">
+                <img src="11.png" alt="eric">
+                <p style="color: rgb(108, 108, 108);">@Retroverse <span>(Former CEO)</span></p>
         </div>
+             </div>
 
         <!-- Join Realm Button -->
         <a href="https://realms.gg/TpuR5Kngiq9Vy3Y" class="join-realm-btn" target="_blank">Join Realm</a>
@@ -173,3 +177,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
