--- a/home/index.html
+++ b/home/index.html
@@ -157,7 +157,7 @@
             </div>
              <div class="staff-member">
                 <img src="11.png" alt="eric">
-                <p style="color: rgb(108, 108, 108);">@Retroverse <span>(Former CEO)</span></p>
+                <p style="color: rgb(108, 108, 108);">@momar3455 <span>(Former CEO)</span></p>
         </div>
              </div>
 
@@ -177,4 +177,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
