Fix HTML formatting and structure

--- a/home/index.html
+++ b/home/index.html
@@ -153,7 +153,7 @@
             </div>
             <div class="staff-member">
                 <img src="11.png" alt="retro">
-                <p style="color: rgb(108, 108, 108);">@Retroverse <span>(Former CEO)</span></p>
+                <p style="color: rgb(108, 108, 108);">@Retroverse <span>(manager / Former CEO)</span></p>
             </div>
              <div class="staff-member">
                 <img src="12.png" alt="eric">
@@ -177,6 +177,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
