--- a/home/index.html
+++ b/home/index.html
@@ -102,7 +102,7 @@
             <div id="dropdown-menu" class="dropdown-content">
                 <a href="index.html">Home</a>
                 <a href="downloads.html">Downloads</a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+                <a href="https://tally.so/embed/np64xZ?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1">Apply</a>
                 <a href="discord.html">Discord</a>
                 <a href="report.html">Report a Bug</a>
                 <a href="https://realms.gg/TpuR5Kngiq9Vy3Y" target="_blank">Join Realm</a>
@@ -167,7 +167,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Luminescent Network 2025</p>
+        <p>Luminescent Network 2026</p>
     </footer>
 
     <!-- Background Music -->
@@ -177,6 +177,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
