Modify Discord page content and invite link
Updated the Discord page with new content and invite link.

--- a/home/discord.html
+++ b/home/discord.html
@@ -143,7 +143,7 @@
         <p>Don't miss out—join the fun now! ✨💥</p>
 
         <div class="discord-button-container">
-            <a href="https://discord.gg/fZQwTvJm" class="discord-invite-btn" target="_blank">
+            <a href="https://discord.gg/wmdafaWmRU" class="discord-invite-btn" target="_blank">
                 Join Our Discord! 🌟
             </a>
         </div>
@@ -156,3 +156,4 @@
 
 </body>
 </html>
+
