--- a/home/index.html
+++ b/home/index.html
@@ -137,11 +137,11 @@
             </div>
             <div class="staff-member">
                 <img src="7.png" alt="OrcaFunny">
-                <p>@OrcaFunny <span>(Co-owner & Assistant Developer)</span></p>
+                <p>@OrcaFunny <span>(Co-owner)</span></p>
             </div>
             <div class="staff-member">
                 <img src="8.png" alt="Ignitemare">
-                <p>@Ignitemare <span>(Lead Developer & Manager)</span></p>
+                <p>@Ignitemare <span>(Lead Modder)</span></p>
             </div>
             <div class="staff-member">
                 <img src="9.png" alt="jj_boi">
@@ -149,7 +149,7 @@
             </div>
             <div class="staff-member">
                 <img src="10.png" alt="chillarealone">
-                <p>@chillarealone <span>(Manager & Moderator)</span></p>
+                <p>@chillarealone <span>(Moderator)</span></p>
             </div>
             <div class="staff-member">
                 <img src="11.png" alt="retro">
@@ -157,7 +157,7 @@
             </div>
              <div class="staff-member">
                 <img src="12.png" alt="eric">
-                <p style="color: rgb(108, 108, 108);">@momar3455 <span>(Modder)</span></p>
+                <p style="color: rgb(108, 108, 108);">@momar3455 <span>(Lead Modder)</span></p>
         </div>
              </div>
 
@@ -177,6 +177,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
