--- a/servers/index.html
+++ b/servers/index.html
@@ -1,18 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="ln.png">
-    <link rel="icon" href="https://luminescentnetwork.github.io/favicon.png" type="image/png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luminescent Network - Servers</title>
+    <link rel="icon" href="https://luminescentnetwork.github.io/ln.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <a href="https://luminescentnetwork.github.io/"><img src="https://luminescentnetwork.github.io/logo.svg" style="width: 30%;" alt=""></a>
-        <a href="/skygens/" class="buttons" style="left: 50%; bottom: 5%;">Skygens</a>
-        <a href="/servers/" class="buttons" style="left: 5%; bottom: 5%;"><img src="https://luminescentnetwork.github.io/servers.jpeg" class="headerIcons" style="padding-top: 3%; width: 8%; left: 5%;"></a>
-        <a href="/downloads/" class="buttons" style="left: 5%; bottom: 5%;"><img src="https://luminescentnetwork.github.io/downloads.jpeg" class="headerIcons" style="padding-top: 3%; width: 8%; left: 5%;"></a>
-    </div>
-    <div ID="bodyText">
-        <h1>Minecraft servers</h1><h3>Luminescent Network Games</h3><p>Luminescent Network's Official big server is now out!<br>How to join:<br>Add @ewoker17 as a friend on Minecraft Bedrock. Occasionally, the server will appear on your friends list.<br>To join our <b>Bedrock Realm</b>, click <a href="https://realms.gg/TpuR5Kngiq9Vy3Y">here</a> or use code TpuR5Kngiq9Vy3Y.</p>
-    </div>
+    <!-- Sticky Navbar -->
+    <nav class="navbar">
+        <a href="../index.html">Home</a>
+        <a href="../home/downloads.html" class="button">Downloads</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+        <a href="../home/discord.html">Discord</a>
+        <a href="index.html" class="active">Servers</a>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="servers-container">
+        <header class="servers-header">
+            <h1>Minecraft Servers</h1>
+            <p class="subtitle">Luminescent Network Games</p>
+        </header>
+
+        <section class="server-info">
+            <div class="info-card">
+                <h2>Official Bedrock Realm</h2>
+                <p class="info-text">Luminescent Network's Official server is now live!</p>
+                <div class="server-details">
+                    <div class="detail-item">
+                        <h3>How to Join</h3>
+                        <p>Add <strong>@ewoker17</strong> as a friend on Minecraft Bedrock. The server will appear on your friends list.</p>
+                    </div>
+                    <div class="detail-item">
+                        <h3>Realm Code</h3>
+                        <p>Use code: <span class="code">TpuR5Kngiq9Vy3Y</span></p>
+                    </div>
+                </div>
+                <a href="https://realms.gg/TpuR5Kngiq9Vy3Y" class="join-btn" target="_blank">Join Realm Now</a>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>Luminescent Network 2026</p>
+    </footer>
 </body>
+</html>
