--- a/home/ann.html
+++ b/home/ann.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Announcements</title>
+  <title>Announcements - Luminescent Network</title>
   <link rel="icon" href="ln.png">
   <link rel="stylesheet" href="style.css">
   <script>
@@ -35,24 +35,29 @@
   <header>
     <img src="luminnet.png" alt="Luminescent Network">
   </header>
-  <div class="announcements-page">
-    <h2>Announcements</h2>
+  <div class="announcements-page-new">
+    <div class="announcements-header">
+      <h1>Announcements</h1>
+      <p class="announcements-subtitle">Latest Updates & News</p>
+    </div>
     <div class="announcement-container">
-      <div class="announcement">
+      <div class="announcement-new">
+        <div class="announcement-badge">NEW</div>
         <h3>🤖✨ Meet Our New Discord AI Bots! 🤖✨</h3>
         <p>We’re excited to introduce our new <strong>Discord AI Bots</strong>! These bots can chat with you just like a real person, providing a fun and engaging experience. Whether you want to chat, ask questions, or just have a good time, our bots are here for you! 🗣️💬</p>
         <img src="a1.png" alt="AI Bots" class="announcement-image">
       </div>
 
-      <div class="announcement">
-        <h3>🔫🎮 Laser Tag Minigame (In Progress) 🎮🔫</h3>
+      <div class="announcement-new">
+        <div class="announcement-badge">IN PROGRESS</div>
+        <h3>🔫🎮 Laser Tag Minigame (Coming Soon) 🎮🔫</h3>
         <p>Get ready for an exciting new <strong>Laser Tag Minigame</strong>! It's currently in progress and we don't have a release date yet. But we can't wait to bring you a thrilling, fast-paced experience! Stay tuned for more updates! 🚨🎯</p>
         <img src="a2.png" alt="Laser Tag Minigame" class="announcement-image">
       </div>
     </div>
   </div>
   <footer>
-    <p>Luminescent Network &copy; 2025</p>
+    <p>Luminescent Network &copy; 2026</p>
   </footer>
 </body>
 </html>
