--- a/home/downloads.html
+++ b/home/downloads.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Downloads</title>
-  <link rel="icon" href="ln.png"> <!-- Title image -->
+  <title>Downloads - Luminescent Network</title>
+  <link rel="icon" href="ln.png">
   <link rel="stylesheet" href="style.css">
   <script>
     function toggleMenu() {
@@ -16,7 +16,7 @@
   <!-- Sticky Navbar -->
   <nav class="navbar" id="nmBar">
     <a href="index.html">Home</a>
-    <a href="downloads.html" class="button">Downloads</a>
+    <a href="downloads.html" class="button active">Downloads</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
     <a href="discord.html">Discord</a>
 
@@ -43,11 +43,21 @@
 
   <!-- Content of downloads.html -->
   <div class="downloads-page">
-    <h2>Downloads</h2>
-    <p>Here you can download cool stuff!</p>
+    <div class="downloads-header">
+      <h1>Downloads</h1>
+      <p class="subtitle">Get exclusive content for Luminescent Network</p>
+    </div>
 
-    <!-- Button for downloading Void World -->
-    <a href="https://www.mediafire.com/file/vbjzsqf0hy7p83u/Void.mcworld/file" target="_blank" class="download-btn-void-world">Download Void World</a>
+    <div class="downloads-container">
+      <div class="download-card">
+        <div class="card-header">
+          <h3>Void World</h3>
+          <span class="tag">Minecraft Bedrock</span>
+        </div>
+        <p class="card-description">Experience an endless void with custom terrain generation and unique gameplay mechanics.</p>
+        <a href="https://www.mediafire.com/file/vbjzsqf0hy7p83u/Void.mcworld/file" target="_blank" class="download-btn-void-world">Download Now</a>
+      </div>
+    </div>
 
     <!-- Background Music -->
     <audio loop autoplay>
@@ -57,7 +67,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>Luminescent Network &copy; 2025</p>
+    <p>Luminescent Network &copy; 2026</p>
   </footer>
 </body>
 </html>
