--- a/accepted/index.html
+++ b/accepted/index.html
@@ -1,50 +1,196 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<link rel="icon" href="favicon.png" type="image/png">
-	<title>Accepted</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="https://luminescentnetwork.github.io/ln.png" type="image/png">
+	<title>Application Accepted - Luminescent Network</title>
 	<style>
-		button {
-			color: #6072ff;
-			background-color: #5d6bd597;
-			backdrop-filter: blur (100%);
-			font-size: 32px;
-			border: 6px solid #4655c3;
-			border-radius: 32px;
-			padding: 15px 50px;
-			cursor: pointer
-			
-		
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
 		}
-		button:hover {
-			color: #5d6bd5;
-			background-color: #6b7aef15;
+
+		html, body {
+			height: 100%;
+			width: 100%;
+			font-family: Arial, sans-serif;
 		}
-	</style>
-	<style>
-		.divemail {
+
+		body {
+			background: linear-gradient(135deg, #0a0a0a 0%, #1a0a2e 50%, #0f0f1e 100%);
+			background-attachment: fixed;
+			display: flex;
+			justify-content: center;
 			align-items: center;
-			background-color: #c3854600;
-			border: 10px solid #c3854600;
-			backdrop-filter: blur (100%);
-			border-radius: 0px;
-			padding: 75px;
-			position: fixed;
-			color: #ffffff;
-			font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+			min-height: 100vh;
+			overflow: hidden;
+		}
+
+		.container {
+			text-align: center;
+			background: linear-gradient(135deg, rgba(155, 77, 226, 0.1), rgba(124, 56, 182, 0.1));
+			border: 2px solid rgba(155, 77, 226, 0.3);
+			border-radius: 20px;
+			padding: 60px 40px;
+			max-width: 600px;
+			width: 90%;
+			box-shadow: 0 8px 32px rgba(155, 77, 226, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.1);
+			animation: slideUp 0.8s ease;
+			position: relative;
+			overflow: hidden;
+		}
+
+		.container::before {
+			content: '';
+			position: absolute;
+			top: -50%;
+			right: -50%;
+			width: 400px;
+			height: 400px;
+			background: radial-gradient(circle, rgba(155, 77, 226, 0.15) 0%, transparent 70%);
+			border-radius: 50%;
+			pointer-events: none;
+		}
+
+		h1 {
+			font-size: 48px;
+			margin-bottom: 15px;
+			background: linear-gradient(135deg, #9b4de2, #ff00ff, #7c38b6);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			background-clip: text;
+			text-shadow: 0 0 30px rgba(155, 77, 226, 0.3);
+			color: #9b4de2;
+			animation: fadeIn 0.8s ease;
+		}
+
+		.success-icon {
+			font-size: 80px;
+			margin-bottom: 20px;
+			animation: bounce 1s ease;
+		}
+
+		p {
+			color: #ccc;
+			font-size: 18px;
+			margin-bottom: 30px;
+			line-height: 1.6;
+		}
+
+		.button-container {
+			display: flex;
+			gap: 15px;
+			justify-content: center;
+			flex-wrap: wrap;
+			margin-top: 40px;
+		}
+
+		.btn {
+			display: inline-block;
+			padding: 15px 40px;
+			font-size: 18px;
+			font-weight: bold;
+			text-decoration: none;
+			border-radius: 10px;
+			transition: all 0.3s ease;
+			border: 2px solid rgba(155, 77, 226, 0.5);
+			cursor: pointer;
+			color: white;
+			position: relative;
+			overflow: hidden;
+		}
+
+		.btn-primary {
+			background: linear-gradient(135deg, #9b4de2, #7c38b6);
+			box-shadow: 0 6px 20px rgba(155, 77, 226, 0.4);
+		}
+
+		.btn-primary:hover {
+			transform: translateY(-3px);
+			box-shadow: 0 10px 30px rgba(155, 77, 226, 0.6);
+		}
+
+		.btn-secondary {
+			background: rgba(155, 77, 226, 0.1);
+			border-color: rgba(155, 77, 226, 0.5);
+		}
+
+		.btn-secondary:hover {
+			background: rgba(155, 77, 226, 0.2);
+			transform: translateY(-3px);
+		}
+
+		@keyframes slideUp {
+			from {
+				opacity: 0;
+				transform: translateY(50px);
+			}
+			to {
+				opacity: 1;
+				transform: translateY(0);
+			}
+		}
+
+		@keyframes fadeIn {
+			from {
+				opacity: 0;
+			}
+			to {
+				opacity: 1;
+			}
+		}
+
+		@keyframes bounce {
+			0%, 100% {
+				transform: translateY(0);
+			}
+			50% {
+				transform: translateY(-20px);
+			}
+		}
+
+		@media (max-width: 600px) {
+			.container {
+				padding: 40px 20px;
+			}
+
+			h1 {
+				font-size: 36px;
+			}
+
+			.success-icon {
+				font-size: 60px;
+			}
+
+			p {
+				font-size: 16px;
+			}
+
+			.btn {
+				padding: 12px 30px;
+				font-size: 16px;
+				width: 100%;
+			}
 		}
 	</style>
 </head>
-<body 
-style="background-image: url('https://github.com/LuminescentNetwork/LuminescentNetwork.github.io/blob/main/Web%20img.JPG?raw=true');">
-	<section float="center">
-		<div class="divemail">
+<body>
+	<div class="container">
+		<div class="success-icon">✨</div>
 		<h1>Application Accepted!</h1>
-        <p>Thank you for your submission. We have given your roles in the Discord</p>
-<a href="https://discord.com/channels/916127258702397501/1322268215514103879">
-		<button type="button" name="close" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Discord</button>
-	</section>	
-</a>
-    	</div>
+		<p>Congratulations! Your application has been reviewed and approved. We've sent your roles in our Discord server.</p>
+		<p>Welcome to the Luminescent Network community! 🎉</p>
+		
+		<div class="button-container">
+			<a href="https://discord.com/channels/916127258702397501/1322268215514103879" class="btn btn-primary">
+				Go to Discord
+			</a>
+			<a href="https://luminescentnetwork.github.io/" class="btn btn-secondary">
+				Back to Home
+			</a>
+		</div>
+	</div>
 </body>
 </html>
