Added Siuozl to the webpage

--- a/home/index.html
+++ b/home/index.html
@@ -137,11 +137,15 @@
             </div>
             <div class="staff-member">
                 <img src="7.png" alt="OrcaFunny">
-                <p>@OrcaFunny <span>(Co-owner)</span></p>
+                <p>@OrcaFunny <span>(Co-owner and Web Manager)</span></p>
             </div>
             <div class="staff-member">
                 <img src="8.png" alt="Ignitemare">
                 <p>@Ignitemare <span>(Lead Modder)</span></p>
+            </div>
+            <div class="staff-member">
+                <img src="13.jpeg" alt="Snizzle">
+                <p>@siuozl <span>(Web Dev & 3D Modeler/Animator)</span></p>
             </div>
             <div class="staff-member">
                 <img src="9.png" alt="jj_boi">
