Add link to Siuozl Staff Member

--- a/home/index.html
+++ b/home/index.html
@@ -144,8 +144,10 @@
                 <p>@Ignitemare <span>(Lead Modder)</span></p>
             </div>
             <div class="staff-member">
+                <a href="https://siuozl.github.io">
                 <img src="13.jpeg" alt="Snizzle">
                 <p>@siuozl <span>(Web Dev & 3D Modeler/Animator)</span></p>
+                </a>
             </div>
             <div class="staff-member">
                 <img src="9.png" alt="jj_boi">
