--- a/home/shop/index.html
+++ b/home/shop/index.html
@@ -4,11 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luminescent Network - Shop</title>
+    <script>
+        function toggleMenu() {
+            document.getElementById("dropdown-menu").classList.toggle("show");
+        }
+    </script>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+
+        .navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: rgba(30, 30, 30, 0.7);
+            backdrop-filter: blur(10px);
+            padding: 15px 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            z-index: 1000;
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            padding: 10px 15px;
+            transition: 0.3s;
+        }
+
+        .navbar a:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown button {
+            background-color: rgba(30, 30, 30, 0.7);
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .dropdown button:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: rgba(30, 30, 30, 0.9);
+            min-width: 160px;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            border-radius: 5px;
+        }
+
+        .dropdown-content a {
+            color: white;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .dropdown-content a:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        .show {
+            display: block;
         }
 
         body {
@@ -53,6 +130,7 @@
             background: linear-gradient(180deg, rgba(29, 0, 51, 0.95) 0%, rgba(45, 0, 82, 0.8) 100%);
             border-bottom: 2px solid #9d4edd;
             box-shadow: 0 4px 20px rgba(157, 78, 221, 0.3);
+            margin-top: 60px;
         }
 
         header h1 {
@@ -310,6 +388,27 @@
     </style>
 </head>
 <body>
+    <nav class="navbar" id="nmBar">
+        <a href="../index.html">Home</a>
+        <a href="../downloads.html" class="button">Downloads</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+        <a href="../discord.html">Discord</a> 
+
+        <div class="dropdown">
+            <button onclick="toggleMenu()">☰ Menu</button>
+            <div id="dropdown-menu" class="dropdown-content">
+                <a href="../index.html">Home</a>
+                <a href="../downloads.html">Downloads</a>
+                <a href="https://tally.so/embed/np64xZ?alignLeft=1&hideTitle=1&dynamicHeight=1">Apply</a>
+                <a href="../discord.html">Discord</a>
+                <a href="../report.html">Report a Bug</a>
+                <a href="https://realms.gg/TpuR5Kngiq9Vy3Y" target="_blank">Join Realm</a>
+                <a href="https://discord.gg/UH32xxsR" target="_blank">Appeal Ban</a>
+                <a href="../ann.html">Announcements</a>
+            </div>
+        </div>
+    </nav>
+
     <div class="bg-stars" id="starsContainer"></div>
 
     <header>
