--- a/home/index.html
+++ b/home/index.html
@@ -90,6 +90,7 @@
     <nav class="navbar" id="nmBar">
         <a href="index.html">Home</a>
         <a href="downloads.html" class="button">Downloads</a>
+        <a href="shop/index.html">Shop</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
         <a href="discord.html">Discord</a> 
 
@@ -98,6 +99,7 @@
             <div id="dropdown-menu" class="dropdown-content">
                 <a href="index.html">Home</a>
                 <a href="downloads.html">Downloads</a>
+                <a href="shop/index.html">Shop</a>
                 <a href="https://tally.so/embed/np64xZ?alignLeft=1&hideTitle=1&dynamicHeight=1">Apply</a>
                 <a href="discord.html">Discord</a>
                 <a href="report.html">Report a Bug</a>
