--- a/home/report.html
+++ b/home/report.html
@@ -16,6 +16,7 @@
   <nav class="navbar" id="nmBar">
     <a href="index.html">Home</a>
     <a href="downloads.html" class="button">Downloads</a>
+    <a href="shop/index.html">Shop</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
     <a href="discord.html">Discord</a>
 
@@ -24,6 +25,7 @@
       <div id="dropdown-menu" class="dropdown-content">
         <a href="index.html">Home</a>
         <a href="downloads.html">Downloads</a>
+        <a href="shop/index.html">Shop</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
         <a href="discord.html">Discord</a>
         <a href="report.html">Report a Bug</a>
