--- a/home/index.html
+++ b/home/index.html
@@ -11,6 +11,7 @@
             document.getElementById("dropdown-menu").classList.toggle("show");
         }
     </script>
+    <script async src="https://tally.so/widgets/embed.js"></script>
     <style>
         .dropdown {
             position: relative;
@@ -100,7 +101,7 @@
                 <a href="index.html">Home</a>
                 <a href="downloads.html">Downloads</a>
                 <a href="shop/index.html">Shop</a>
-                <a href="https://tally.so/embed/np64xZ?alignLeft=1&hideTitle=1&dynamicHeight=1">Apply</a>
+                <a href="#tally-open=np64xZ&tally-emoji-text=👋&tally-emoji-animation=flash">Apply</a>
                 <a href="discord.html">Discord</a>
                 <a href="report.html">Report a Bug</a>
                 <a href="https://realms.gg/TpuR5Kngiq9Vy3Y" target="_blank">Join Realm</a>
