Changed all apply buttons to run a tally

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -97,7 +97,7 @@
     <nav class="navbar">
         <a href="https://luminescentnetwork.github.io/">Home</a>
         <a href="https://luminescentnetwork.github.io/home/downloads.html">Downloads</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+        <a href="#tally-open=np64xZ&tally-emoji-text=👋&tally-emoji-animation=flash">Apply</a>
         <a href="https://luminescentnetwork.github.io/home/discord.html">Discord</a>
     </nav>
 
