--- a/home/discord.html
+++ b/home/discord.html
@@ -21,7 +21,7 @@
         <a href="index.html">Home</a>
         <a href="downloads.html" class="button">Downloads</a>
         <a href="shop/index.html">Shop</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+        <a href="#tally-open=np64xZ&tally-emoji-text=👋&tally-emoji-animation=flash">Apply</a>
         <a href="discord.html" class="active">Discord</a>
 
         <div class="dropdown">
@@ -29,7 +29,7 @@
             <div id="dropdown-menu" class="dropdown-content">
                 <a href="index.html">Home</a>
                 <a href="downloads.html">Downloads</a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+                <a href="#tally-open=np64xZ&tally-emoji-text=👋&tally-emoji-animation=flash">Apply</a>
                 <a href="discord.html">Discord</a>
                 <a href="report.html">Report a Bug</a>
                 <a href="https://realms.gg/TpuR5Kngiq9Vy3Y" target="_blank">Join Realm</a>
@@ -103,7 +103,7 @@
     <nav class="navbar">
         <a href="index.html">Home</a>
         <a href="downloads.html" class="button">Downloads</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+        <a href="#tally-open=np64xZ&tally-emoji-text=👋&tally-emoji-animation=flash">Apply</a>
         <a href="discord.html">Discord</a>
 
         <div class="dropdown">
@@ -111,7 +111,7 @@
             <div id="dropdown-menu" class="dropdown-content">
                 <a href="index.html">Home</a>
                 <a href="downloads.html">Downloads</a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+                <a href="#tally-open=np64xZ&tally-emoji-text=👋&tally-emoji-animation=flash">Apply</a>
                 <a href="discord.html">Discord</a>
                 <a href="report.html">Report a Bug</a>
                 <a href="https://realms.gg/TpuR5Kngiq9Vy3Y" target="_blank">Join Realm</a>
