--- a/home/index.html
+++ b/home/index.html
@@ -92,7 +92,7 @@
         <a href="index.html">Home</a>
         <a href="downloads.html" class="button">Downloads</a>
         <a href="shop/index.html">Shop</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_M8TPysEcmyGIYTqtLuSY80REuboMwj4nB9t4JenSgTZAIQ/viewform">Apply</a>
+        <a href="#tally-open=np64xZ&tally-emoji-text=👋&tally-emoji-animation=flash">Apply</a>
         <a href="discord.html">Discord</a> 
 
         <div class="dropdown">
