Padded the luminescent logo

--- a/home/downloads.html
+++ b/home/downloads.html
@@ -37,7 +37,7 @@
   </nav>
 
   <header>
-    <img src="luminnet.png" alt="Luminescent Network">
+    <img src="luminnet.png" alt="Luminescent Network" style="padding: top 30px;">
   </header>
 
   <div class="downloads-page">
