--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-icon">✨</span>
-                <span class="logo-text">Luminescent Network</span>
+                <img class="logo-icon" alt="Luminescent Network Logo" src="luminnet.png">
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#info" class="nav-link">Info</a></li>
                 <li><a href="#servers" class="nav-link">Servers</a></li>
                 <li><a href="#staff" class="nav-link">Staff</a></li>
-                <li><a href="#download" class="nav-link">Download</a></li>
+                <li><a href="#downloads" class="nav-link">Downloads</a></li>
                 <li><a href="#apply" class="nav-link">Apply</a></li>
             </ul>
             <div class="hamburger">
@@ -32,8 +31,8 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1 class="glowing-text">Welcome to Luminescent Network</h1>
-            <p class="subtitle">Experience the ultimate gaming network</p>
-            <button class="cta-button">Get Started</button>
+            <p class="subtitle">Experience the ultimate Minecraft network</p>
+            <button class="cta-button">More info</button>
         </div>
     </section>
 
@@ -45,8 +44,8 @@
         <div class="info-grid">
             <div class="info-card">
                 <div class="card-icon">🎮</div>
-                <h3>Gaming</h3>
-                <p>Join thousands of players in immersive gaming experiences across multiple platforms.</p>
+                <h3>Minecraft servers</h3>
+                <p>Join many players in a luminescent adventure.</p>
             </div>
         </div>
     </section>
@@ -58,10 +57,9 @@
         </div>
         <div class="servers-grid">
             <div class="server-card">
-                <h3>Survival</h3>
+                <h3>Server</h3>
                 <p class="server-status">Status: <span class="online">Online</span></p>
-                <p class="server-players">Players: 245/500</p>
-                <p class="server-desc">Classic survival gameplay with friends</p>
+                <p class="server-desc">Fun server</p>
                 <button class="join-btn">Join Server</button>
             </div>
         </div>
@@ -75,71 +73,25 @@
         <div class="staff-grid">
             <div class="staff-card">
                 <div class="staff-avatar">👨‍💼</div>
-                <h3>Alex Chen</h3>
+                <h3>Ewoker17</h3>
                 <p class="role">Founder & CEO</p>
-                <p class="bio">Visionary leader with 10+ years in gaming</p>
+                <p class="bio">Visionary leader</p>
             </div>
         </div>
     </section>
 
-    <section id="download" class="download-section">
+    <section id="downloads" class="download-section">
         <div class="section-header">
-            <h2 class="glowing-text">Download</h2>
+            <h2 class="glowing-text">Downloads</h2>
             <div class="glow-line"></div>
         </div>
         <div class="download-container">
-            <p class="download-text">Get started with Luminescent Network today</p>
+            <p class="download-text">Download custom world maps and content</p>
             <div class="download-buttons">
-                <button class="download-btn windows">
-                    <span class="btn-icon">🪟</span>
-                    Windows
+                <button class="download-btn">
+                    <span class="btn-icon">🗺️</span>
+                    Download World
                 </button>
-                <button class="download-btn mac">
-                    <span class="btn-icon">🍎</span>
-                    macOS
-                </button>
-                <button class="download-btn linux">
-                    <span class="btn-icon">🐧</span>
-                    Linux
-                </button>
-            </div>
-            <p class="system-requirements">Minimum: 8GB RAM, 2GB Storage | Recommended: 16GB RAM, 10GB Storage</p>
-        </div>
-    </section>
-
-    <section id="apply" class="apply-section">
-        <div class="section-header">
-            <h2 class="glowing-text">Join Our Team</h2>
-            <div class="glow-line"></div>
-        </div>
-        <div class="apply-container">
-            <form class="apply-form" id="applyForm">
-                <div class="form-group">
-                    <label for="name">Full Name *</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email *</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="position">Position *</label>
-                    <select id="position" name="position" required>
-                        <option value="">Select a position</option>
-                        <option value="developer">Developer</option>
-                        <option value="moderator">Moderator</option>
-                        <option value="designer">Designer</option>
-                        <option value="support">Support</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="message">Why do you want to join? *</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Submit Application</button>
-            </form>
-            <div class="success-message" id="successMessage" style="display: none;">
-                ✨ Application submitted successfully! We'll review it shortly.
             </div>
         </div>
     </section>
@@ -147,11 +99,6 @@
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; 2026 Luminescent Network. All rights reserved.</p>
-            <div class="social-links">
-                <a href="#" class="social-link">Discord</a>
-                <a href="#" class="social-link">Twitter</a>
-                <a href="#" class="social-link">YouTube</a>
-            </div>
         </div>
     </footer>
 
