--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img class="logo-icon" alt="Luminescent Network Logo" src="luminnet.png">
+                <img class="logo-text" alt="Luminescent Network Logo" src="luminnet.png">
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
