--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luminescent Network</title>
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://tally.so/widgets/embed.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -18,7 +19,7 @@
                 <li><a href="#servers" class="nav-link">Servers</a></li>
                 <li><a href="#staff" class="nav-link">Staff</a></li>
                 <li><a href="#downloads" class="nav-link">Downloads</a></li>
-                <li><a href="#apply" class="nav-link">Apply</a></li>
+                <li><a href="#tally-open=np64xZ&tally-emoji-text=👋&tally-emoji-animation=flash" class="nav-link">Apply</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
