--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="staff-grid">
             <div class="staff-card">
-                <div class="staff-avatar"><img src="old web/home/6.png" alt=""></div>
+                <div class="staff-avatar"><img src="old web/home/6.png" alt="" style="size: 5%;"></div>
                 <h3>Ewoker17</h3>
                 <p class="role">Founder & CEO</p>
                 <p class="bio">Visionary leader</p>
