--- a/index.html
+++ b/index.html
@@ -75,8 +75,50 @@
             <div class="staff-card">
                 <div class="staff-avatar"><img src="old web/home/6.png" alt=""></div>
                 <h3>Ewoker17</h3>
-                <p class="role">Founder & CEO</p>
+                <p class="role">Founder</p>
                 <p class="bio">Visionary leader</p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="old web/home/7.png" alt=""></div>
+                <h3>Orcafunny</h3>
+                <p class="role">Co-owner</p>
+                <p class="bio"></p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="old web/home/8.png" alt=""></div>
+                <h3>Ignitemare</h3>
+                <p class="role">Modder</p>
+                <p class="bio"></p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="old web/home/13.jpeg" alt=""></div>
+                <h3>Snizzle</h3>
+                <p class="role">Web Dev</p>
+                <p class="bio">I'm a webdev and 3d modeler for Luminescent Network, and... I like the color blue :)</p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="old web/home/9.png" alt=""></div>
+                <h3>jj_boi</h3>
+                <p class="role">Moderator & Bot Dev</p>
+                <p class="bio"></p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="old web/home/10.png" alt=""></div>
+                <h3>chillarealone</h3>
+                <p class="role">Moderator</p>
+                <p class="bio"></p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="old web/home/11.png" alt=""></div>
+                <h3>Retroverse</h3>
+                <p class="role">Manager / Former CEO</p>
+                <p class="bio"></p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="old web/home/12.png" alt=""></div>
+                <h3>momar3455</h3>
+                <p class="role">Lead Modder</p>
+                <p class="bio"></p>
             </div>
         </div>
     </section>
