--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="staff-avatar"><img src="old web/home/6.png" alt=""></div>
                 <h3>Ewoker17</h3>
                 <p class="role">Founder</p>
-                <p class="bio">Visionary leader</p>
+                <p class="bio">I'm the Owner and I do Modeling, Coding and make sure Luminescent Network is up to my vision. And remember: Where imagination becomes playable - without limits</p>
             </div>
             <div class="staff-card">
                 <div class="staff-avatar"><img src="old web/home/7.png" alt=""></div>
@@ -119,6 +119,12 @@
                 <h3>momar3455</h3>
                 <p class="role">Lead Modder</p>
                 <p class="bio"></p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="old web/home/shroom.webp" alt=""></div>
+                <h3>Shroom</h3>
+                <p class="role">Builder</p>
+                <p class="bio">Hello I am <i>Shroom</i> and i have been building seriously and competitively for about two years now. And I like tacos 🌮</p>
             </div>
         </div>
     </section>
