--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                 <div class="staff-avatar"><img src="old web/home/7.png" alt=""></div>
                 <h3>Orcafunny</h3>
                 <p class="role">Co-owner</p>
-                <p class="bio"></p>
+                <p class="bio">Command Guy, Moderator, Modeler, Artist, Builds, Can Kinda Code.</p>
             </div>
             <div class="staff-card">
                 <div class="staff-avatar"><img src="old web/home/8.png" alt=""></div>
                 <h3>Ignitemare</h3>
                 <p class="role">Modder</p>
-                <p class="bio"></p>
+                <p class="bio">An experienced Minecraft player, builder, and artist who makes discord servers for people (:</p>
             </div>
             <div class="staff-card">
                 <div class="staff-avatar"><img src="old web/home/13.jpeg" alt=""></div>
@@ -100,31 +100,49 @@
                 <div class="staff-avatar"><img src="old web/home/9.png" alt=""></div>
                 <h3>jj_boi</h3>
                 <p class="role">Moderator & Bot Dev</p>
-                <p class="bio"></p>
+                <p class="bio">[Error: No Bio]</p>
             </div>
             <div class="staff-card">
                 <div class="staff-avatar"><img src="old web/home/10.png" alt=""></div>
                 <h3>chillarealone</h3>
                 <p class="role">Moderator</p>
-                <p class="bio"></p>
+                <p class="bio">[Error: No Bio]</p>
             </div>
             <div class="staff-card">
                 <div class="staff-avatar"><img src="old web/home/11.png" alt=""></div>
                 <h3>Retroverse</h3>
                 <p class="role">Manager / Former CEO</p>
-                <p class="bio"></p>
+                <p class="bio">[Error: No Bio]</p>
             </div>
             <div class="staff-card">
                 <div class="staff-avatar"><img src="old web/home/12.png" alt=""></div>
                 <h3>momar3455</h3>
                 <p class="role">Lead Modder</p>
-                <p class="bio"></p>
+                <p class="bio">[Error: No Bio]</p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="" alt=""><p>?</p></div>
+                <h3>8Crafter</h3>
+                <p class="role">Modder</p>
+                <p class="bio">A very experienced programmer, Minecraft Bedrock Edition YouTuber, and add-on creator.</p>
             </div>
             <div class="staff-card">
                 <div class="staff-avatar"><img src="old web/home/shroom.webp" alt=""></div>
                 <h3>Shroom</h3>
-                <p class="role">Builder</p>
+                <p class="role">Trainee</p>
                 <p class="bio">Hello I am <i>Shroom</i> and i have been building seriously and competitively for about two years now. And I like tacos 🌮</p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="" alt=""><p>?</p></div>
+                <h3>#CarsonGT4AA</h3>
+                <p class="role">Trainee</p>
+                <p class="bio">[Error: No Bio]</p>
+            </div>
+            <div class="staff-card">
+                <div class="staff-avatar"><img src="" alt=""><p>?</p></div>
+                <h3>BĪĜĜØĐÇØBRĀ</h3>
+                <p class="role">Trainee</p>
+                <p class="bio">[Error: No Bio]</p>
             </div>
         </div>
     </section>
