--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         <div class="hero-content">
             <h1 class="glowing-text">Welcome to Luminescent Network</h1>
             <p class="subtitle">Experience the ultimate Minecraft network</p>
+            <div class="carousel-container">
+        <div class="carousel">
+            <img src="1.png" alt="Image 1">
+            <img src="2.png" alt="Image 2">
+            <img src="3.png" alt="Image 3">
+            <img src="4.png" alt="Image 4">
+        </div>
+    </div>
             <button class="cta-button">More info</button>
         </div>
     </section>
