--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <img src="old web/home/2.png" alt="Image 2">
             <img src="old web/home/3.png" alt="Image 3">
             <img src="old web/home/4.png" alt="Image 4">
+            <img src="old web/home/1.png" alt="Image 1">
         </div>
     </div>
             <button class="cta-button">More info</button>
